dark mode bug fix

--- a/src/components/SignupForm/SignupForm.css
+++ b/src/components/SignupForm/SignupForm.css
@@ -78,6 +78,10 @@ a:hover {
     border: 1px red solid;
 }
 
+.error.dark {
+    border: 1px red solid;
+}
+
 #prohibited:hover {
     cursor: not-allowed;
     transform: none;
